--- a/targetPolarization.ipynb
+++ b/targetPolarization.ipynb
@@ -2,18 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "acquired-challenge",
+   "execution_count": 1,
+   "id": "enhanced-burden",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to JupyROOT 6.22/06\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-2_hjnzds because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+     ]
+    }
+   ],
    "source": [
     "%run tools/tpol_tools.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "operational-lewis",
+   "execution_count": 2,
+   "id": "julian-disability",
    "metadata": {},
    "outputs": [
     {
@@ -34,555 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "dominican-environment",
+   "execution_count": 3,
+   "id": "tracked-mills",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17227. 17237. 17240. 17245. 17246.]\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n",
-      "0.300+/-0.004\n",
-      "0.2912+/-0.0016\n",
-      "0.2865+/-0.0014\n",
-      "0.2792+/-0.0020\n",
-      "0.334+/-0.026\n",
-      "0.3008+/-0.0026\n",
-      "0.2958+/-0.0018\n",
-      "0.2881+/-0.0016\n",
-      "0.2779+/-0.0017\n",
-      "0.2834+/-0.0030\n",
-      "0.310+/-0.005\n",
-      "0.2987+/-0.0023\n",
-      "0.2970+/-0.0020\n",
-      "0.2879+/-0.0020\n",
-      "0.2836+/-0.0020\n",
-      "0.2815+/-0.0028\n",
-      "0.306+/-0.022\n",
-      "0.3022+/-0.0029\n",
-      "0.2986+/-0.0025\n",
-      "0.2967+/-0.0024\n",
-      "0.2902+/-0.0024\n",
-      "0.2888+/-0.0025\n",
-      "0.2876+/-0.0032\n",
-      "0.309+/-0.005\n",
-      "0.3091+/-0.0034\n",
-      "0.3020+/-0.0035\n",
-      "0.299+/-0.004\n",
-      "0.288+/-0.004\n",
-      "0.290+/-0.004\n",
-      "0.294+/-0.007\n",
-      "0.295+/-0.010\n",
-      "0.311+/-0.005\n",
-      "0.309+/-0.006\n",
-      "0.312+/-0.006\n",
-      "0.298+/-0.007\n",
-      "0.299+/-0.009\n",
-      "0.298+/-0.016\n",
-      "0.303+/-0.007\n",
-      "0.312+/-0.007\n",
-      "0.313+/-0.008\n",
-      "0.311+/-0.009\n",
-      "0.306+/-0.018\n",
-      "0.285+/-0.010\n",
-      "0.303+/-0.010\n",
-      "0.302+/-0.011\n",
-      "0.297+/-0.015\n",
-      "0.276+/-0.017\n",
-      "0.309+/-0.014\n",
-      "0.308+/-0.017\n",
-      "0.295+/-0.030\n",
-      "0.293+/-0.022\n",
-      "0.306+/-0.032\n",
-      "0.31+/-0.08\n",
-      "0.28+/-0.04\n"
+      "[17227. 17237. 17240. 17245. 17246.]\n"
      ]
     },
     {
@@ -942,7 +417,7 @@
        "[270 rows x 30 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1014,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neural-universe",
+   "id": "explicit-fireplace",
    "metadata": {},
    "outputs": [],
    "source": []
